Updated the login module and Added admin login and register modules.

--- a/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.css
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.css
@@ -107,3 +107,21 @@ a:hover {
     opacity: 1;
   }
 }
+#admin-login {
+  background-color: #e69db8;
+  border-color: #e69db8;
+  color: black;
+  margin-top: 0.5em;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 0.5em 0.5em;
+  margin-left: 5em;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 0.25rem;
+  display: inline-block;
+}
+
+#admin-login:hover {
+  background-color: #ddd;
+  text-decoration: none;
+}
