--- a/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.html
@@ -66,10 +66,17 @@
             >
             <br />
             <br />
+            <!-- ✅ New Admin Login Button -->
+            <br />
+            <a href="../Admin-login/login.html" id="admin-login">
+              Go to Admin Login
+            </a>
             <!-- OTP Input for Login -->
             <div id="otp-container" class="fade-in">
               <div id="otp" class="mb-4">
-                <label for="otpInput" class="form-label">Enter OTP</label>
+                <label for="otpInput" class="form-label"
+                  >Enter OTP sent to your email</label
+                >
                 <input
                   type="text"
                   id="otpInput"
