--- a/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.css
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.css
@@ -63,10 +63,8 @@ header {
 }
 .login-form form {
   margin-bottom: 15px;
-  background: white;
   padding: 30px;
-  border-radius: 26px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
+  border: none;
 }
 .login-form h2 {
   margin: 0 0 15px;
@@ -115,8 +113,6 @@ body {
 .login-wrapper {
   display: flex;
   align-items: center;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
 }
@@ -135,4 +131,9 @@ body {
   cursor: pointer;
   margin-left: 8.5em;
   position: fixed;
+}
+#login-form {
+  background-color: white;
+  box-shadow: none;
+  border: none;
 }
