Backend : Added the Stock keeping Unit modelrepo and controller. Frontend : updated admin login, register modules and added images.

--- a/Next-Gen-Smart-Shopping-Platform/app/components/Admin-Register/Register.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Admin-Register/Register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../Admin-Register/Register.css" />
     <link
       rel="icon"
-      href="../../resources/Images/supply-chain-management.gif"
+      href="/resources/image/online-shopping.png"
       type="image/x-icon"
     />
   </head>
