--- a/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../Admin-login/login.css" />
     <link
       rel="icon"
-      href="../../resources/Images/supply-chain-management.gif"
+      href="/resources/image/online-shopping.png"
       type="image/x-icon"
     />
   </head>
