--- a/Next-Gen-Smart-Shopping-Platform/app/components/common/sidenav.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/common/sidenav.html
@@ -1,12 +1,12 @@
 <a class="closebtn" onclick="closeNav()">&times;</a>
 <br />
-<a href="../stock-keeping unit/stock-keeping unit.html">
+<a href="../Admin-Products/Products.html">
   <img
     src="/resources/image/replenishment.png"
     alt="icon"
     style="width: 0.9em; margin-bottom: 0.2em"
   />
-  Stock keeping unit
+  Products
 </a>
 
 <a href="../customer-orders/customer-orders.html">
