Frontend : fixed products module image uploading issues.

--- a/Next-Gen-Smart-Shopping-Platform/app/components/Admin-Products/Products.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Admin-Products/Products.html
@@ -25,7 +25,7 @@
     <main>
         <div class="container product-management">
           <br>
-            <h2 id="title">Products</h2>
+            <h2 id="productsHeading">Products</h2>
             <br>
             <div class="row">
                 <div class="col-md-8">
