Updated login, products, cart modules modules and added home module.

--- a/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Login/login.html
@@ -68,8 +68,8 @@
             <br />
             <!-- ✅ New Admin Login Button -->
             <br />
-            <a href="../Admin-login/login.html" id="admin-login">
-              Go to Admin Login
+            <a href="/app/components/Home/home.html" id="admin-login">
+              Go to Home
             </a>
             <br />
             <br />
