--- a/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.html
+++ b/Next-Gen-Smart-Shopping-Platform/app/components/Admin-login/login.html
@@ -17,10 +17,10 @@
   <body>
     <div class="header-buttons">
       <a
-        href="../Login/login.html"
+        href="/app/components/Home/home.html"
         class="btn btn-primary"
         target="_blank"
-        >Customer Login</a
+        >Go to Home</a
       >
     </div>
     <header>
